// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MiniCartItem stories snapshot > AtStockLimit story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-md"
>
  <div
    class="w-full max-w-md h-full bg-background shadow-xl flex flex-col rounded-lg overflow-hidden"
  >
    <div
      class="flex-shrink-0 border-b border-border"
    >
      <div
        class="flex items-center justify-between px-4 sm:px-6 py-4"
      >
        <div
          class="[&_h1]:my-0 truncate pr-2"
        >
          <div
            class="flex items-center gap-2 mb-6"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-truck size-[1.125rem] text-foreground shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
              />
              <path
                d="M15 18H9"
              />
              <path
                d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
              />
              <circle
                cx="17"
                cy="18"
                r="2"
              />
              <circle
                cx="7"
                cy="18"
                r="2"
              />
            </svg>
            <div>
              <h2
                class="text-left text-xl font-normal leading-[120%] tracking-[-0.6px] text-card-foreground"
              >
                Delivery - 1 out of 1 item
              </h2>
            </div>
          </div>
        </div>
        <button
          aria-label="Close cart"
          class="p-2 rounded-lg transition-colors text-muted-foreground hover:text-foreground hover:bg-muted focus:outline-none focus:ring-2 focus:ring-ring"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex-1 overflow-y-auto overflow-x-hidden"
    >
      <div
        class="pt-4 md:pt-6 pb-4 md:pb-6"
      >
        <div
          class="pt-4 border-t border-border"
        >
          <div
            class="px-4 md:px-6 py-4"
          >
            <div
              class="flex gap-4"
              data-testid="mini-cart-item"
            >
              <div
                class="flex-shrink-0 w-20 h-20 md:w-24 md:h-24 bg-muted overflow-hidden rounded-ui transition-all duration-500"
              >
                <div
                  class="w-full h-full bg-muted flex items-center justify-center text-muted-foreground text-xs"
                >
                  No image
                </div>
              </div>
              <div
                class="flex-1 min-w-0 flex flex-col"
              >
                <div
                  class="grid grid-cols-[minmax(0,1fr)_auto] items-start gap-x-4 gap-y-2 mb-2"
                >
                  <div
                    class="min-w-0"
                  >
                    <a
                      class="hover:underline"
                      data-discover="true"
                      href="/RefArchGlobal/en-GB/product/mock-product-1"
                    >
                      <h3
                        class="text-left text-xl font-semibold leading-none tracking-[-0.6px] text-card-foreground line-clamp-2"
                      >
                        Product Name
                      </h3>
                    </a>
                    <div
                      class="mt-1 space-y-0.5"
                    >
                      <span
                        class="text-left inline-block w-full text-sm font-normal leading-5 text-muted-foreground"
                      >
                        <span>
                          Color
                          : 
                        </span>
                        <span>
                          Grey
                        </span>
                      </span>
                      <span
                        class="text-left inline-block w-full text-sm font-normal leading-5 text-muted-foreground"
                      >
                        <span>
                          Size
                          : 
                        </span>
                        <span>
                          XL
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex w-full max-w-[11rem] justify-self-end flex-col items-end text-right"
                  >
                    <div
                      class="flex flex-col-reverse items-end gap-0 text-right"
                    >
                      <h5
                        aria-hidden="true"
                        class="text-left text-xl font-semibold leading-none tracking-[-0.6px] text-card-foreground [&:not(:first-child)]:mt-0"
                      >
                        £15.00
                      </h5>
                      <span
                        aria-atomic="true"
                        aria-live="polite"
                        class="sr-only"
                      >
                        Product Name
                         
                        Current price: £15.00
                      </span>
                       
                      <h5
                        aria-hidden="true"
                        class="text-left text-xl font-normal leading-[120%] tracking-[-0.6px] text-card-foreground line-through [&:not(:first-child)]:mt-0"
                      >
                        £80.00
                      </h5>
                      <span
                        aria-atomic="true"
                        aria-live="polite"
                        class="sr-only"
                      >
                        Product Name
                         
                        List price: £80.00
                      </span>
                    </div>
                    <div
                      class="text-right text-muted-foreground text-sm"
                    >
                      £3.75
                       
                      each
                    </div>
                    <span
                      class="inline-flex items-center justify-center rounded-full w-fit shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 h-auto min-h-0 border-0 bg-muted px-1.5 py-0.5 text-xs font-semibold text-secondary-foreground mt-1 max-w-full whitespace-normal break-words text-right leading-normal"
                      data-slot="badge"
                    >
                      Saved £65.00
                    </span>
                  </div>
                </div>
                <div
                  class="mb-2 flex w-fit max-w-full flex-col items-start gap-1"
                >
                  <label
                    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
                    data-slot="label"
                    for="quantity-mock-cart-line-1"
                  >
                    Quantity
                  </label>
                  <div
                    aria-label="Quantity for Product Name"
                    class="inline-flex border border-input rounded-ui overflow-hidden h-9 w-fit max-w-full items-center gap-2 px-2 py-2"
                    role="group"
                  >
                    <button
                      aria-label="Decrement Quantity for Product Name"
                      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                      data-testid="quantity-decrement"
                    >
                      −
                    </button>
                    <input
                      aria-label="Quantity"
                      class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                      max="4"
                      min="1"
                      step="1"
                      type="number"
                      value="4"
                    />
                    <button
                      aria-label="Increment Quantity for Product Name"
                      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                      data-testid="quantity-increment"
                      disabled=""
                    >
                      +
                    </button>
                  </div>
                  <p
                    aria-live="polite"
                    class="text-sm font-medium leading-none text-left text-destructive mt-1"
                    role="alert"
                  >
                    Maximum stock reached
                  </p>
                </div>
                <button
                  aria-label="Remove item from cart"
                  class="text-sm font-medium leading-5 text-primary hover:underline text-left"
                  type="button"
                >
                  Remove
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-shrink-0 border-t border-border p-4 md:p-6 space-y-3"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-size="default"
        data-slot="button"
        data-variant="default"
      >
        Checkout $59.00
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-size="default"
        data-slot="button"
        data-variant="outline"
      >
        Continue Shopping
      </button>
      <button
        class="w-full text-center text-sm text-primary hover:text-primary/80 transition-colors focus:outline-none focus:ring-2 focus:ring-ring rounded py-2"
        type="button"
      >
        View Cart
      </button>
    </div>
  </div>
</div>
`;

exports[`MiniCartItem stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-md"
>
  <div
    class="w-full max-w-md h-full bg-background shadow-xl flex flex-col rounded-lg overflow-hidden"
  >
    <div
      class="flex-shrink-0 border-b border-border"
    >
      <div
        class="flex items-center justify-between px-4 sm:px-6 py-4"
      >
        <div
          class="[&_h1]:my-0 truncate pr-2"
        >
          <div
            class="flex items-center gap-2 mb-6"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-truck size-[1.125rem] text-foreground shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
              />
              <path
                d="M15 18H9"
              />
              <path
                d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
              />
              <circle
                cx="17"
                cy="18"
                r="2"
              />
              <circle
                cx="7"
                cy="18"
                r="2"
              />
            </svg>
            <div>
              <h2
                class="text-left text-xl font-normal leading-[120%] tracking-[-0.6px] text-card-foreground"
              >
                Delivery - 1 out of 1 item
              </h2>
            </div>
          </div>
        </div>
        <button
          aria-label="Close cart"
          class="p-2 rounded-lg transition-colors text-muted-foreground hover:text-foreground hover:bg-muted focus:outline-none focus:ring-2 focus:ring-ring"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex-1 overflow-y-auto overflow-x-hidden"
    >
      <div
        class="pt-4 md:pt-6 pb-4 md:pb-6"
      >
        <div
          class="pt-4 border-t border-border"
        >
          <div
            class="px-4 md:px-6 py-4"
          >
            <div
              class="flex gap-4"
              data-testid="mini-cart-item"
            >
              <div
                class="flex-shrink-0 w-20 h-20 md:w-24 md:h-24 bg-muted overflow-hidden rounded-ui transition-all duration-500"
              >
                <div
                  class="w-full h-full bg-muted flex items-center justify-center text-muted-foreground text-xs"
                >
                  No image
                </div>
              </div>
              <div
                class="flex-1 min-w-0 flex flex-col"
              >
                <div
                  class="grid grid-cols-[minmax(0,1fr)_auto] items-start gap-x-4 gap-y-2 mb-2"
                >
                  <div
                    class="min-w-0"
                  >
                    <a
                      class="hover:underline"
                      data-discover="true"
                      href="/RefArchGlobal/en-GB/product/mock-product-1"
                    >
                      <h3
                        class="text-left text-xl font-semibold leading-none tracking-[-0.6px] text-card-foreground line-clamp-2"
                      >
                        Product Name
                      </h3>
                    </a>
                    <div
                      class="mt-1 space-y-0.5"
                    >
                      <span
                        class="text-left inline-block w-full text-sm font-normal leading-5 text-muted-foreground"
                      >
                        <span>
                          Color
                          : 
                        </span>
                        <span>
                          Grey
                        </span>
                      </span>
                      <span
                        class="text-left inline-block w-full text-sm font-normal leading-5 text-muted-foreground"
                      >
                        <span>
                          Size
                          : 
                        </span>
                        <span>
                          XL
                        </span>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex w-full max-w-[11rem] justify-self-end flex-col items-end text-right"
                  >
                    <div
                      class="flex flex-col-reverse items-end gap-0 text-right"
                    >
                      <h5
                        aria-hidden="true"
                        class="text-left text-xl font-semibold leading-none tracking-[-0.6px] text-card-foreground [&:not(:first-child)]:mt-0"
                      >
                        £15.00
                      </h5>
                      <span
                        aria-atomic="true"
                        aria-live="polite"
                        class="sr-only"
                      >
                        Product Name
                         
                        Current price: £15.00
                      </span>
                       
                      <h5
                        aria-hidden="true"
                        class="text-left text-xl font-normal leading-[120%] tracking-[-0.6px] text-card-foreground line-through [&:not(:first-child)]:mt-0"
                      >
                        £20.00
                      </h5>
                      <span
                        aria-atomic="true"
                        aria-live="polite"
                        class="sr-only"
                      >
                        Product Name
                         
                        List price: £20.00
                      </span>
                    </div>
                    <span
                      class="inline-flex items-center justify-center rounded-full w-fit shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent [a&]:hover:bg-primary/90 h-auto min-h-0 border-0 bg-muted px-1.5 py-0.5 text-xs font-semibold text-secondary-foreground mt-1 max-w-full whitespace-normal break-words text-right leading-normal"
                      data-slot="badge"
                    >
                      Saved £5.00
                    </span>
                  </div>
                </div>
                <div
                  class="mb-2 flex w-fit max-w-full flex-col items-start gap-1"
                >
                  <label
                    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
                    data-slot="label"
                    for="quantity-mock-cart-line-1"
                  >
                    Quantity
                  </label>
                  <div
                    aria-label="Quantity for Product Name"
                    class="inline-flex border border-input rounded-ui overflow-hidden h-9 w-fit max-w-full items-center gap-2 px-2 py-2"
                    role="group"
                  >
                    <button
                      aria-label="Decrement Quantity for Product Name"
                      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                      data-testid="quantity-decrement"
                      disabled=""
                    >
                      −
                    </button>
                    <input
                      aria-label="Quantity"
                      class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                      min="1"
                      step="1"
                      type="number"
                      value="1"
                    />
                    <button
                      aria-label="Increment Quantity for Product Name"
                      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                      data-testid="quantity-increment"
                    >
                      +
                    </button>
                  </div>
                </div>
                <button
                  aria-label="Remove item from cart"
                  class="text-sm font-medium leading-5 text-primary hover:underline text-left"
                  type="button"
                >
                  Remove
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-shrink-0 border-t border-border p-4 md:p-6 space-y-3"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-size="default"
        data-slot="button"
        data-variant="default"
      >
        Checkout $59.00
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-ui hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
        data-size="default"
        data-slot="button"
        data-variant="outline"
      >
        Continue Shopping
      </button>
      <button
        class="w-full text-center text-sm text-primary hover:text-primary/80 transition-colors focus:outline-none focus:ring-2 focus:ring-ring rounded py-2"
        type="button"
      >
        View Cart
      </button>
    </div>
  </div>
</div>
`;

exports[`MiniCartItem stories snapshot > EmptyCart story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-md"
>
  <div
    class="w-full max-w-md h-full bg-background shadow-xl flex flex-col rounded-lg overflow-hidden"
  >
    <div
      class="flex-shrink-0 border-b border-border"
    >
      <div
        class="flex items-center justify-between px-4 sm:px-6 py-4"
      >
        <div
          class="[&_h1]:my-0 truncate pr-2"
        >
          <div
            class="flex items-center gap-2 mb-6"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-truck size-[1.125rem] text-foreground shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 18V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"
              />
              <path
                d="M15 18H9"
              />
              <path
                d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"
              />
              <circle
                cx="17"
                cy="18"
                r="2"
              />
              <circle
                cx="7"
                cy="18"
                r="2"
              />
            </svg>
            <div>
              <h2
                class="text-left text-xl font-normal leading-[120%] tracking-[-0.6px] text-card-foreground"
              >
                Delivery - 0 out of 0 items
              </h2>
            </div>
          </div>
        </div>
        <button
          aria-label="Close cart"
          class="p-2 rounded-lg transition-colors text-muted-foreground hover:text-foreground hover:bg-muted focus:outline-none focus:ring-2 focus:ring-ring"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex-1 overflow-y-auto overflow-x-hidden"
    >
      <div
        class="pt-4 md:pt-6 pb-4 md:pb-6"
      >
        <div
          class="pt-4 border-t border-border"
        >
          <div
            class="px-4 md:px-6 py-4"
          >
            <div
              class="flex flex-col items-center text-center py-8"
            >
              <svg
                aria-hidden="true"
                class="w-24 h-24 text-muted-foreground/30 mx-auto mb-6"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
              <h2
                class="text-2xl font-semibold text-foreground mb-2"
              >
                Your cart is empty
              </h2>
              <p
                class="text-sm text-muted-foreground mb-8 max-w-xs"
              >
                Looks like you haven't added anything to your cart yet. Start shopping to fill it up with amazing products!
              </p>
              <button
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 py-2 has-[>svg]:px-3 px-8"
                data-size="default"
                data-slot="button"
                data-variant="default"
              >
                Start Shopping
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
